<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.networkopsim</groupId>
    <artifactId>network-operator-simulator</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>Network Operator Simulator</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <main.class>com.networkopsim.game.NetworkGame</main.class>
        <jlink.launcher.name>NetOpSim</jlink.launcher.name>
        <jlink.module.name>networkoperatorsimulator.appmodule</jlink.module.name>
        <jdk.jmods.path>${java.home}/jmods</jdk.jmods.path>
        <jlink.image.output.dir>${project.build.directory}/app-image</jlink.image.output.dir>
    </properties>

    <dependencies>
        <!-- Dependencies -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>create-jlink-image</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jlink</executable>
                            <arguments>
                                <argument>--module-path</argument>
                                <argument>${jdk.jmods.path}${path.separator}${project.build.outputDirectory}</argument>
                                <argument>--add-modules</argument>
                                <argument>${jlink.module.name}</argument>
                                <argument>--launcher</argument>
                                <argument>${jlink.launcher.name}=${jlink.module.name}/${main.class}</argument>
                                <argument>--output</argument>
                                <argument>${jlink.image.output.dir}</argument>
                                <argument>--strip-debug</argument>
                                <argument>--compress=2</argument>
                                <argument>--no-header-files</argument>
                                <argument>--no-man-pages</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/zip-image.xml</descriptor>
                    </descriptors>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <appendAssemblyId>true</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
